Reconfiguracion de variables tiempo y costo, ENUM para TipodeServicio y Ciudad